--- a/profiles/templates/profiles/handler_dashboard.html
+++ b/profiles/templates/profiles/handler_dashboard.html
@@ -9,7 +9,7 @@
       {{geoform.media}}
       <div class="ui grid" style="margin: 0%; padding: 0%;">
         <div class="two column row">
-            <div class="nine wide column"  style="margin-right:0%;">
+            <div class="ten wide column"  style="margin-right:0%;">
                 {%if cb %}
                 {%if cb.status == 'Pending' %}
                 <div class="ui info message">
@@ -151,9 +151,11 @@
                   </div>
               </div>
 
-              <div class="seven wide column" style="padding: 0%;margin:0%;">
+              <div class="six wide column" style="padding: 0%;margin:0%;">
                 <div class="ui right aligned basic segment" style="padding: 0%;margin:0%;">
-
+                    <div class="ui inverted segment">
+                        <h4>Calendar</h4>
+                      </div>
                     <div class="ui buttons">
                       <button class="ui button"  id = "prev" >Previous Year</button>
                       <div class="or"></div>
