--- a/profiles/templates/profiles/load_event_handler.html
+++ b/profiles/templates/profiles/load_event_handler.html
@@ -40,10 +40,8 @@
     <thead>
     <tr>
         <th class="two wide">Start Date</th>
-        <td>{{sched.dog_request.date_start}}</td>
+        <td>{{sched.date_start}}</td>
 
-        <th class="two wide">End Date</th>
-        <td>{{sched.dog_request.date_end}}</td>
     </tr>
     </thead>
 </table>
