--- a/unitmanagement/templates/unitmanagement/ajax_load_checkups.html
+++ b/unitmanagement/templates/unitmanagement/ajax_load_checkups.html
@@ -34,7 +34,7 @@
 
 <form method="POST" action="{% url 'unitmanagement:k9_checkup_pending' %}">
      {% csrf_token %}
- <div class="ui right aligned segment" style="padding: 0px;">
+ <div class="ui right aligned basic segment" style="padding: 0px;">
                                     <button onclick="return confirm('Are you sure?')" class = "ui button green" type="submit" >Schedule Units</button>
                                 </div>
 </form>
