--- a/unitmanagement/templates/unitmanagement/k9_checkup_list_today.html
+++ b/unitmanagement/templates/unitmanagement/k9_checkup_list_today.html
@@ -1,5 +1,6 @@
 {% extends "profiles/sidebar_um.html" %}
 {% load static %}
+{% load um_tags %}
 
 {% block content %}
 <div class="ui basic segment"  style="margin-bottom:0px;">
@@ -9,7 +10,7 @@
     </h2>
     {% if messages %}
         {% for message in messages %}
-            <div class="{{style}}" > {{ message }}</div>
+            <div class="ui green message" > {{ message }}</div>
         {% endfor %}
     {% endif %}
 </div>
@@ -30,6 +31,7 @@
                 <th>K9</th>
                 <th>Handler</th>
                 <th>Checkup Date</th>
+                <th>Deployment Date</th>
                 <th></th>
             </tr>
         </thead>
@@ -44,10 +46,17 @@
                 <td>{{data.0.k9}}</td>
                 <td >{{data.0.k9.handler}}</td>
                 {% if data.1 == True %}
-                <td>{{data.0.date_start}} (Today)</td>
+                <td>{{data.0.date_start|date:'Y-m-d'}} (Today)</td>
                 {% else %}
-                 <td>{{data.0.date_start}}</td>
+                 <td>{{data.0.date_start|date:'Y-m-d'}}</td>
                  {%endif%}
+
+                {% if data.0.status == "Checkup"%}
+                <td>{{deployment_list|list_item:forloop.counter0|date:'Y-m-d'}}</td>
+                {% else %}
+                <td>On port</td>
+                {% endif %}
+
                 <td style="text-align:center;" class="two wide">
                     <a href="{% url 'unitmanagement:physical_exam_form' data.0.k9.id %}" class="ui tiny basic blue button">Select</a>
                 </td>
