Added view event details on event click (dashboards) + TL sorting for deployment

--- a/deployment/templates/deployment/request_dog_details.html
+++ b/deployment/templates/deployment/request_dog_details.html
@@ -318,7 +318,9 @@
 
     $(document).ready(function() {
         $('#tabledata1').DataTable();
-        $('#tabledata2').DataTable();
+        $('#tabledata2').DataTable({
+              "order": [[ 4, "desc" ]]
+        });
         $('#tabledata3').DataTable();
         $('.menu .item').tab();
     });
