--- a/deployment/templates/deployment/request_dog_list.html
+++ b/deployment/templates/deployment/request_dog_list.html
@@ -27,7 +27,7 @@
 
                 <th>Place</th>
                 <th>K9s Requested</th>
-                <th>K9s Deployed</th>
+                <th>K9s Scheduled</th>
                 <th>Status</th>
                 <th></th>
             </tr>
