--- a/profiles/templates/profiles/commander_dashboard.html
+++ b/profiles/templates/profiles/commander_dashboard.html
@@ -54,6 +54,10 @@
         </div>
     </div>    
 </div>
+
+
+  <div id = "id_event_load"></div>
+
 <style>
     #prev, #next{
       background-color:orangered;
@@ -98,6 +102,25 @@ $(document).ready(function() {
                     $('#calendar').fullCalendar('changeView', 'agendaDay');
 
                 },
+
+             eventClick: function(event, element) {
+                var url = 'ajax_load_event';
+
+                 $.ajax({
+                        url: url,
+                        data: {
+                        'event_id': event.id,},
+                        success: function (data) {
+                          $('#event_modal').modal('show');
+                          $("#id_event_load").html(data);
+                          },
+                        error:
+                            function(xhr){
+                            alert(xhr.statusText)
+                            return false;}
+                    });
+
+                 }
 
           });
 
