--- a/profiles/templates/profiles/vet_dashboard.html
+++ b/profiles/templates/profiles/vet_dashboard.html
@@ -53,11 +53,11 @@
                                 <div class="ui raised center aligned segment">
                                         <div class="ui two column grid">
                                             <div class="four wide column">
-                                                    <div class="card">
-                                                            <div class="content">
-                                                                <i class="huge syringe purple icon">{{yearly_count}}</i>
+                                                    <div class="ui statistic">
+                                                            <div class="value">
+                                                                <i class="syringe purple icon">{{yearly_count}}</i>
                                                             </div>
-                                                            <div class="extra content">
+                                                            <div class="label">
                                                                 <strong>
                                     <a href="{% url 'unitmanagement:yearly_vaccine_list'%}">YEARLY VACCINATIONS</a>
                                                                 </strong>
@@ -105,14 +105,13 @@
                     <div class="ui equal width grid">
                         <div class="column">
                                 <div class="ui raised center aligned segment">
-                                    <div class="card">
-                                        <div class="content">
-                                            <i class="huge calendar alternate orange icon">{{health_pending}}</i>
+                                    <div class="ui statistic">
+                                        <div class="value">
+                                            <i class="calendar alternate orange icon">{{health_pending}}</i>
                                         </div>
                                         <div class="extra content">
                                             <strong>
-                                                <a href="{% url
-                                                'unitmanagement:k9_sick_list'%}"
+                                                <a href="{% url 'unitmanagement:k9_sick_list'%}"
                                                 style="font-size: 11px;">PHEX TO BE SCHEDULED</a>
                                             </strong>
                                         </div>
@@ -121,11 +120,11 @@
                             </div>
                         <div class="column">
                             <div class="ui raised center aligned segment">
-                                <div class="card">
-                                    <div class="content">
-                                        <i class="huge first aid green icon">{{health_pending}}</i>
+                                <div class="ui statistic">
+                                    <div class="value">
+                                        <i class="first aid green icon">{{health_pending}}</i>
                                     </div>
-                                    <div class="extra content">
+                                    <div class="label">
                                         <strong>
                                             <a href="{% url 'unitmanagement:k9_sick_list'%}">HEALTH CONCERNS</a>
                                         </strong>
@@ -135,11 +134,11 @@
                         </div>
                         <div class="column">
                             <div class="ui raised center aligned segment">
-                                <div class="card">
-                                    <div class="content">
-                                        <i class="huge exclamation venus mars teal icon">{{mated_count}}</i>
+                                <div class="ui statistic">
+                                    <div class="value">
+                                        <i class="exclamation venus mars teal icon">{{mated_count}}</i>
                                     </div>
-                                    <div class="extra content">
+                                    <div class="label">
                                         <strong>
                                             <a href="{% url 'planningandacquiring:breeding_list'%}?type=mated">MATED K9's</a>
                                         </strong>
@@ -150,11 +149,11 @@
                 
                         <div class="column">
                             <div class="ui raised center aligned segment">
-                                <div class="card">
-                                    <div class="content">
-                                        <i class="huge heart red icon">{{pregnant_count}}</i>
+                                <div class="ui statistic">
+                                    <div class="value">
+                                        <i class="heart red icon">{{pregnant_count}}</i>
                                     </div>
-                                    <div class="extra content">
+                                    <div class="label">
                                         <strong>
                                             <a href="{% url 'planningandacquiring:breeding_list'%}?type=pregnant">PREGNANT K9's</a>
                                         </strong>
@@ -168,12 +167,12 @@
                     <div class="ui equal width grid">
                         <div class="column">
                                 <div class="ui raised center aligned segment">
-                                    <div class="card">
-                                        <div class="content">
-                                            <i class="huge paw alternate olive icon">{{ab_k9}}</i>
+                                    <div class="ui statistic">
+                                        <div class="value">
+                                            <i class="paw alternate olive icon">{{ab_k9}}</i>
                                         </div>
-                                        <div class="extra content">
-                                            <strong  style="font-size: 11px;">
+                                        <div class="label">
+                                            <strong>
                                                 <a href="{% url 'planningandacquiring:add_procured_k9'%}">K9 ACQUISITION COUNTDOWN</a>
                                             </strong>
                                         </div>
@@ -182,13 +181,13 @@
                             </div>
                         <div class="column">
                             <div class="ui raised center aligned segment">
-                                <div class="card">
-                                    <div class="content">
-                                        <i class="huge exclamation black icon">{{incident}}</i>
+                                <div class="ui statistic">
+                                    <div class="value">
+                                        <i class="exclamation black icon">{{incident}}</i>
                                     </div>
-                                    <div class="extra content">
+                                    <div class="label">
                                         <strong>
-                                            <a href="#">K9 INCIDENTS</a>
+                                            <a href="{% url 'unitmanagement:k9_incident'%}">K9 INCIDENTS</a>
                                         </strong>
                                     </div>
                                 </div>
@@ -204,6 +203,20 @@
                                     <div class="extra content">
                                         <strong>
                                             <a href="{% url 'training:adoption_list'%}">K9 FOR-ADOPTION</a>
+                                        </strong>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
+                        <div class="column">
+                            <div class="ui raised center aligned segment">
+                                <div class="ui statistic">
+                                    <div class="value">
+                                        <i class="certificate violet icon">{{classify_count}}</i>
+                                    </div>
+                                    <div class="label">
+                                        <strong>
+                                            <a href="{% url 'unitmanagement:trained_list'%}">CLASSIFY K9's</a>
                                         </strong>
                                     </div>
                                 </div>
