--- a/planningandacquiring/templates/planningandacquiring/procured_form_data.html
+++ b/planningandacquiring/templates/planningandacquiring/procured_form_data.html
@@ -47,7 +47,15 @@
             </div>    
             </div>
         </div>
-        <div class="four fields">
+        <div class="six fields">
+            <div class="field">
+                <label for="">Height(cm)</label>
+                {{form.height}}
+            </div>   
+            <div class="field">
+                <label for="">Weight(kg)</label>
+                {{form.weight}}
+            </div>   
             <div class="field">
                 <label for="">DHPP</label>
                 {{form.date_dhhp}}
